fixed 'change password' alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,7 +55,11 @@ input {
 }
 
 .text-left {
-  text-align: left !important;
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-inline {
